# ConnectFour

./: CMakeLists.txt  README.md  main.cpp
Clock/: clock.cpp  clock.h
Game/: game.cpp  game.h
MCTS/: allocator.cpp  allocator.h  node.cpp  node.h  tree.cpp  tree.h
